--- a/03_teorema_delle_funzioni_implicite/03_teorema_delle_funzioni_implicite.tex
+++ b/03_teorema_delle_funzioni_implicite/03_teorema_delle_funzioni_implicite.tex
@@ -41,7 +41,7 @@ $
 \begin{proof}\footnote{Si veda anche \cite{Conti1993}}
 Supponiamo, per esempio, che $\frac{\partial g}{\partial y} (P_0) > 0$. Dal fatto che $g \in C^1(A)$, le derivate prime sono continue, quindi vale la permanenza del segno \footnote{
 \textbf{Teorema }\textnormal{(della permanenza del segno)}\textbf{.}\textit{
-Siano $A \subset \mathbb{R}^n$ e $f : A \longrightarrow \mathbb{R}$ continua in un punto $P_0 \in A$ con $f(P_0) = 0$. Allora $\exists \, r_0 > 0$ tale che
+Siano $A \subset \mathbb{R}^n$ e $f : A \longrightarrow \mathbb{R}$ continua in un punto $P_0 \in A$ con $f(P_0) > 0$. Allora $\exists \, r_0 > 0$ tale che
 $$
 f(P) > 0 \qquad \forall P \in \mathrm{B}(P_0,\,r_0) \cap A
 $$
@@ -88,7 +88,7 @@ $
 \end{center}
 Da $\mathrm{(2)}+\mathrm{(3)}$ segue che, essendo
 $$
-[y_0-\sigma,\,y_0+\sigma] \ni y \longmapsto g(x_0,\,y) \in \mathbb{R}
+[y_0-\sigma,\,y_0+\sigma] \ni y \longmapsto g(x,\,y) \in \mathbb{R}
 $$
 strettamente crescente $\forall \, x \in (x_0-\delta,\, x_0+\delta)$ fissato, possiamo concludere che, per il teorema dei valori intermedi, vale (D1).
 
@@ -431,7 +431,7 @@ $\mathrm{(\star)}$
 $\displaystyle
 J(h)(x) = -
 \left( \dfrac{\partial g}{\partial y}(x,\,h(x)) \right)^{-1}
-\bullet
+\cdot
 \dfrac{\partial g}{\partial x}(x,\,h(x))
 $
 \hfill \null \\
