--- a/04_ODEs/04_ODEs.tex
+++ b/04_ODEs/04_ODEs.tex
@@ -875,7 +875,7 @@ con $I \subseteq \mathbb{R}$ intervallo tale che
 x'_{1}(t) = f_{1} (t,\,x_1(t),\,x_2(t),\ldots,\,x_n(t))\\
 x'_{2}(t) = f_{2} (t,\,x_1(t),\,x_2(t),\ldots,\,x_n(t))\\
 \vdots\\
-x'_{n}(t) = f_{n} (t,\,x_1(t),\,x_2(t),\ldots,\,x_n)\\
+x'_{n}(t) = f_{n} (t,\,x_1(t),\,x_2(t),\ldots,\,x_n(t))\\
 \end{cases}
 \qquad \forall t \in I
 $
@@ -1097,7 +1097,7 @@ $$
 X_c(t) = \left( x(t+c),\,y(t+c) \right)
 $$
 è ancora una soluzione di $\mathrm{(S)}$ (grazie all'indipendenza da $t$!).
-\item Se $(x_0,\,y_0) \in \mathbb{R}^2$ è una soluzione de sistema algebrico
+\item Se $(x_0,\,y_0) \in \mathbb{R}^2$ è una soluzione del sistema algebrico
 $$
 \mathrm{(\star)}
 \begin{cases}
@@ -1468,7 +1468,7 @@ La periodicità della soluzione del caso $2$ ci è garantita dal seguente teorem
 \begin{thm}
 Sia $A \subseteq \mathbb{R}^2$ aperto e sia $U \in C^1(A)$ un integrale primo di $\mathrm{(S)}$. Definiamo, per un dato $c>0$, 
 $$
-\Gamma_c \doteqdot \lbrace (x,\,y) \in \mathbb{R}^2 : U(x,\,y) = x \rbrace
+\Gamma_c \doteqdot \lbrace (x,\,y) \in \mathbb{R}^2 : U(x,\,y) = c \rbrace
 $$
 e supponiamo che
 \begin{enumerate}[labelindent=\parindent,leftmargin=*,label=\textnormal{(\roman*)},start=1]
