--- a/book.tex
+++ b/book.tex
@@ -92,17 +92,18 @@
 \renewcommand*{\thefootnote}{(\arabic{footnote})}
 \makeatother
 
-\setlength{\paperheight}{297mm}
-\setlength{\paperwidth}{210mm}
-\setlength{\oddsidemargin}{1.5cm}
-\setlength{\evensidemargin}{0cm}
+\usepackage[text={14.5cm,20.84cm},centering]{geometry}
+%\setlength{\paperheight}{297mm}
+%\setlength{\paperwidth}{210mm}
+%\setlength{\oddsidemargin}{1.5cm}
+%\setlength{\evensidemargin}{0cm}
 \setlength{\topmargin}{1mm}
 \setlength{\headheight}{1.36cm}
 \setlength{\headsep}{1.00cm}
-\setlength{\textheight}{20.84cm}
-\setlength{\textwidth}{14.5cm}
-\setlength{\marginparsep}{1mm}
-\setlength{\marginparwidth}{3cm}
+%\setlength{\textheight}{20.84cm}
+%\setlength{\textwidth}{14.5cm}
+%\setlength{\marginparsep}{1mm}
+%\setlength{\marginparwidth}{3cm}
 \setlength{\footskip}{2.36cm}
 
 \pagestyle{fancy}
